--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ header nav ul li a {
 
 header .hamburger {
     display: none;
+    color: white;
 }
 button {
     padding: 10px 20px;
@@ -75,7 +76,7 @@ button {
     }
 
     header nav ul{
-        background-color: papayawhip;
+        background-color: navy;
         display: none;
         flex-direction: column;
         position: absolute;
@@ -89,6 +90,10 @@ button {
 
     ul:nth-child(1){
         padding-top: 10px;
+    }
+
+    ul:last-child{
+        padding-bottom: 20px;
     }
 
 }
