--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@ header {
     padding: 10px 20px;
     min-height: 15vh;
     position: relative;
-    color: #450d0d;
+    color: #F5F5DC;
+    border-bottom: 2px dotted beige;
 }
 
 header .logo {
@@ -61,6 +62,118 @@ button {
     color: black;
 }
 
+.skills-section {
+  background-color: navy;
+  color: beige;
+  padding: 40px 20px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+h2 {
+  color: white;
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 2.5rem;
+}
+.skills-section {
+    background-color: navy;
+    color: beige;
+    padding: 40px 20px;
+  }
+  
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+  
+  h2 {
+    color: white;
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 2.5rem;
+  }
+  
+  /* .skills-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  } */
+  
+  .skill-item {
+    background-color: #001f3f;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    /* flex: 1 1 calc(33.33% - 20px); */
+    margin: 10px;
+    transition: transform 0.3s ease;
+  }
+  
+  .skill-item:hover {
+    transform: scale(1.1);
+  }
+  
+  .skill-item h3 {
+    color: white;
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+  }
+  
+  .skill-item p {
+    font-size: 1.05rem;
+    color: beige;
+  }
+footer {
+    background-color: navy;
+    display: flex;
+    justify-content: space-between;
+  }
+  footer div {
+    margin: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  footer div h1 {
+    color: white;
+    font-size: medium;
+    margin: 20px 20px 20px 5px;
+    border-bottom: 1px solid red;
+  }
+  footer div a {
+    margin: 5px;
+    text-decoration: none;
+    color: rgb(174, 162, 162);
+  }
+
+  footer div a:hover {
+    color: #fff;
+  }
+
+@media only screen and (max-width: 481px) {
+  /* .skill-item {
+    flex: 1 1 100%; 
+  } */
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  .skill-item h3 {
+    font-size: 1.3rem;
+  }
+
+  .skill-item p {
+    font-size: 1rem;
+  }
+}
+
 @media only screen and (max-width : 768px) {
     header {
         min-height: 10vh;
@@ -80,20 +193,32 @@ button {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 60px;
+        top: 70px;
         left: 0;
         right: 0;
         text-align: center;
         font-size: 0.8rem;
         padding-bottom: 8px;
+        border-bottom: 2px dotted beige;
     }
 
     ul:nth-child(1){
-        padding-top: 10px;
+        padding-top: 20px;
     }
 
     ul:last-child{
         padding-bottom: 20px;
+    }
+
+    /* .skill-item {
+        flex: 1 1 calc(50% - 20px);
+    } */
+
+    footer {
+        background-color: navy;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-between;
     }
 
 }
