--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,10 @@ footer {
     display: flex;
     flex-direction: column;
   }
+  footer div .links{
+    margin: 0;
+    padding: 0;
+  }
   footer div h1 {
     color: white;
     font-size: medium;
@@ -177,6 +181,7 @@ footer {
   .skill-item p {
     font-size: 1rem;
   }
+  
 }
 
 @media only screen and (max-width : 768px) {
@@ -232,6 +237,14 @@ footer {
     footer div h1 span {
       padding-bottom: 3px;
       border-bottom: 1px solid red;
+    }
+    footer div {
+      padding: 10px;
+    }
+    footer div .links {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
     }
 
 }
