--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,52 @@ footer {
   footer div a:hover {
     color: #fff;
   }
+  #about {
+    min-height: 100vh;
+    background-color: navy;
+    color: beige;
+    padding: 40px 20px;
+    border: 1px dotted white;
+    font-size: larger;
+    line-height: 30px;
+}
 
+#about h1 {
+    font-size: 2.5rem;
+    padding-bottom: 10px;
+    color: #F5F5DC;
+    text-align: center;
+}
+
+#about h2 {
+    font-size: 1.8rem;
+    color: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#about p {
+    margin-bottom: 20px;
+}
+
+#about ul {
+    margin: 20px 0;
+    padding-left: 20px;
+}
+
+#about ul li {
+    margin-bottom: 10px;
+    color: beige;
+}
+
+#about a {
+    color: #FFC0CB;
+    text-decoration: none;
+}
+
+#about a:hover {
+    text-decoration: underline;
+}
 @media only screen and (max-width: 481px) {
   /* .skill-item {
     flex: 1 1 100%; 
@@ -269,6 +314,16 @@ footer {
       flex-direction: row;
       justify-content: space-evenly;
     }
+
+    #about h1 {
+      font-size: 2rem; /* Smaller font size for mobile */
+      margin-top: 10px; /* Adjust margin */
+  }
+
+    #about h2 {
+        font-size: 1.5rem; /* Smaller font size for mobile */
+        margin-top: 20px; /* Adjust margin */
+     }
 
 }
 
