--- a/styles.css
+++ b/styles.css
@@ -191,17 +191,18 @@ footer {
     min-height: 100vh;
     background-color: navy;
     color: beige;
-    padding: 40px 20px;
+    padding: 30px 20px;
     border: 1px dotted white;
     font-size: larger;
     line-height: 30px;
-}
+  }
 
 #about h1 {
     font-size: 2.5rem;
     padding-bottom: 10px;
     color: #F5F5DC;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 #about h2 {
@@ -233,6 +234,7 @@ footer {
 #about a:hover {
     text-decoration: underline;
 }
+
 @media only screen and (max-width: 481px) {
   /* .skill-item {
     flex: 1 1 100%; 
